--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self'; object-src 'self';" />
+  <!-- Adjusted CSP -->
+  <meta http-equiv="Content-Security-Policy" 
+        content="script-src 'self' 'unsafe-eval' https://api.example.com; 
+                 object-src 'self'; 
+                 connect-src 'self' https://api.example.com;" />
   <title>HomeHop</title>
 </head>
 <body>
   <div id="root"></div>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
 </body>
 </html>
